# saveglass

./: .env.example  .gitignore  Dockerfile  README.md  USER_MANAGEMENT.md  YARONG_DOCKER_READY.md  YARONG_USER_SETUP.md  add_yarong_user_simple.py  create_demo_users.py  create_yaron_user.py  docker-compose.yml  pyproject.toml  setup_yarong_user.json
.streamlit/: config.toml
collectors/: Dockerfile  docker-run.sh  eks_cloudwatch_collector.py  split_csv_by_resource.py
resources/config/: agents.yaml
resources/data/: ebs_volumes.csv  eks_clusters.csv  usage_report.csv
resources/prompts/: system_prompts.yaml
resources/ui/: config.yaml  styles.css
scripts/: ensure_yarong_user.py  startup.sh
src/agents_playground/: __init__.py  admin.py  admin_panel.py  agent.py  app.py  auth.py  auth_manager.py  auth_utils.py  aws_tools.py  config_loader.py  factory.py  langchain_tools.py  logger.py  models.py  session_storage.py  utils.py
